
NEW FEATURES

    o (1.25.4) Check for single colon typos when using qualified imports pkg::foo()
    o (1.25.1) Check for warning/notes on too-brief a Description: field 
    (@federicomarini, #65)
    o (1.25.8) Validate ORCID IDs (if any) in the DESCRIPTION file
    (@LiNk-NY, #97)
    o (1.25.10) Add check for properly formatted CITATION file

BUG FIXES

    o (1.25.9) All packages including infrastructure require a vignette 
    o Usage of donttest and dontrun in manual pages tagged with the keyword 
    'internal' will no longer trigger a NOTE (@grimbough, #59)
    o (1.25.7) Adding the sessionInfo at the end of the vignette (@llrs)

USER SIGNIFICANT CHANGES

    o (1.25.3) Require Aurhors@R format over Author/Maintainer fields in the
    DESCRIPTION file. This has been upgraded to an ERROR.
    o (1.25.2) Resolve <https://github.com/Bioconductor/BiocCheck/issues/57>: Suggest
    styler over formatR for automatic code re-formatting.
    o (1.25.5) Add warning to new package versions with non-zero x version
    (@mtmorgan, #101)


CHANGES IN VERSION 1.23
-----------------------

BUG FIX

    o (1.23.4) Update locations for NEWS
    o (1.23.1) Fix False Positive class == check

CHANGES IN VERSION 1.19
-----------------------

NEW FEATURES

    o (1.19.33) Add Authors@R vs Author/Maintainer check
    o (1.19.29) Add non evaluated code chunks that have not been executed
    because of invalid syntax (```, ```R, ```r). Valid syntax for an evaluated
    code chunk takes the form ```{r} or ```{R}.
    o (1.19.28) Check that vignette metadata set correctly
    o (1.19.27) Check for Author@R or Author/Maintainer but not both
    o (1.19.25) Check for use of remotes: in Description
    o (1.19.18) Check for use of dontrun/donttest
    o (1.19.15) Check vignetteEngine/vignetteBuilder minimially declared in
    Suggests
    o (1.19.9) Check usage of donttest and dontrun in man page documentation